0.26-dev

  Don't break under taint mode on OpenBSD. (thanks to Frank Denis /
  Jedi/Sector One)

  Have the qmail-queue plugin add the message-id to the "Queued!"
  message we send back to the client (to help those odd sendmail using
  people debug their logs)

  Set the process name to "qpsmtpd [1.2.3.4 : host.name.tld]"

  Fixed timeout bug when the client sent DATA and then stopped before
  sending the next line. (Gergely Risko <risko@risko.hu>) 

  unrecognized_command hook and a count_unrecognized_commands
  plugin. (Rasjid Wilcox)

  check_earlytalker plugin.  Deny the connection if the client talks
  before we show our SMTP banner.  (From Devin Carraway)

  Patch Qpsmtpd::SMTP to allow connect plugins to give DENY and
  DENYSOFT return codes.  Based on patch from Devin Carraway.

  Support morercpthosts.cdb

  config now takes an extra "type" parameter.  If it's "map" then a
  reference to a tied hash will be returned.


0.25 - 2003/03/18

  Use the proper RFC2822 date format in the Received headers. (Somehow
  I had convinced myself that ISO8601 dates were okay). Thanks to
  Kee Hinckley <nazgul@somewhere.com>.

  Print the date in the local timezone instead of in -0000. (Not
  entirely convinced this is a good idea)

  Lots of changes from Rasjid Wilcox <rasjidw@openminddev.net>:

  Fix error handling in queue/qmail-queue. (Rasjid)
 
  Add option to queue/qmail-queue to specify an alternate qmail-queue
  location. (Rasjid)

  Add support for the QMAILQUEUE environment variable. (Rasjid)

  PPerl compatibility (yay!)  (Rasjid)

  Allow mail to <abuse> and <postmaster> to go through. (Rasjid)

  Add "deny" hook that gets called when another hook returns DENY or
  DENYSOFT. (Rasjid)

  Add list of required modules to the README. Thanks to Skaag Argonius
  <skaag@skaag.net>.

  Fix dnsbl plugin to give us all the results. (Patch from Matt
  Sergeant <matt@sergeant.org>)

  Disable identd lookups by passing -R to tcpserver. (Thanks to Matt)
